<resources>
    <string name="app_name">Teesas</string>
    <string name="action_settings">Settings</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="or">OR</string>
    <string name="login_with">login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="create_account">Create a new account?</string>
    <string name="register">Register</string>
    <string name="pre_school">Pre School</string>
    <string name="primary_school">Primary School</string>
    <string name="fullname">Enter Name</string>
    <string name="address">Enter Address</string>
    <string name="location">City / Nearest location</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dashboard_txt">Good to see you again</string>
    <string name="menu_my_topics">My Topics</string>
    <string name="menu_take_quiz">Play Quiz</string>
    <string name="menu_my_friends">My Friends</string>
    <string name="menu_share_quiz">Share Quiz</string>
    <string name="menu_results">Results</string>
    <string name="welcome">Welcome, Chika</string>
</resources>