<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.chikadibia.teesas.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_progress"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_login_bottom_bg"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_phone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:hint="@string/email">

                    <net.rimoto.intlphoneinput.IntlPhoneInput
                        android:id="@+id/my_phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:OnValidityChange="@{viewmodel::done}"
                        android:paddingStart="5dp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_lock" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:hint="@string/password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:onTextChanged="@{viewmodel::onPasswordChanged}"
                        android:paddingStart="5dp"
                        android:text="@={viewmodel.password}"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/white"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:onClick="@{()->viewmodel.forgotPassword()}"
                android:text="@string/forgot_password"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_continue"
                style="@style/ButtonStyle"
                android:layout_width="152dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:enabled="@{viewmodel.btnSelected}"
                android:onClick="@{()->viewmodel.login()}"
                android:text="@string/login" />


            <TextView
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/or"
                android:textStyle="bold" />

            <TextView
                android:layout_width="73dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_with"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginTop="15dp"/>


                <Button
                    android:id="@+id/btn_register"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="@{()->viewmodel.register()}"
                    android:text="@string/register" />
            </LinearLayout>


        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
