<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewmodel"
            type="com.chikadibia.teesas.ui.viewmodel.RegisterViewModel" />
        <import type="android.view.View"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_progress"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--        <LinearLayout-->
                    <!--            android:layout_width="wrap_content"-->
                    <!--            android:layout_height="wrap_content"-->
                    <!--            android:orientation="vertical"-->
                    <!--            android:layout_marginBottom="80dp">-->
                    <!--            <TextView-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="Register"-->
                    <!--                android:textSize="80dp"-->
                    <!--                />-->
                    <!--        </LinearLayout>-->

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_login_bottom_bg"
                        android:orientation="vertical"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginTop="10dp"
                                android:src="@drawable/ic_phone" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/email">

                                <net.rimoto.intlphoneinput.IntlPhoneInput
                                    android:id="@+id/my_phone_input"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="5dp"
                                    android:OnValidityChange="@{viewmodel::done}" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{viewmodel.preschoolMutableLiveData.name}"
                                android:textStyle="bold"
                                android:textSize="30dp"
                                android:layout_marginLeft="30dp"/>
                        </LinearLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pre_school"
                                android:textColor="@color/black"
                                android:layout_marginTop="20dp"
                                android:layout_marginLeft="50dp"
                                android:onClick="@{(view)->viewmodel.getShoolList(view)}"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/primary_school"
                                android:layout_marginLeft="200dp"
                                android:layout_marginTop="20dp"
                                android:textColor="@color/black"
                                android:onClick="@{(view)->viewmodel.getShoolList(view)}"/>

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_person" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/fullname">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionDone"
                                    android:inputType="text"
                                    android:onTextChanged="@{viewmodel::onNameChanged}"
                                    android:paddingStart="5dp"
                                    android:text="@={viewmodel.name}"
                                    android:textColor="@color/black"
                                    android:backgroundTint="@color/white"
                                    android:textSize="20sp" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_lock" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/password">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionDone"
                                    android:inputType="textPassword"
                                    android:onTextChanged="@{viewmodel::onPasswordChanged}"
                                    android:paddingStart="5dp"
                                    android:text="@={viewmodel.password}"
                                    android:textColor="@color/black"
                                    android:backgroundTint="@color/white"
                                    android:textSize="20sp" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_envelop" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/email">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionDone"
                                    android:inputType="text"
                                    android:onTextChanged="@{viewmodel::onEmailChanged}"
                                    android:paddingStart="5dp"
                                    android:text="@={viewmodel.email}"
                                    android:textColor="@color/black"
                                    android:backgroundTint="@color/white"
                                    android:textSize="20sp" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_location" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/location">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:imeOptions="actionDone"
                                    android:inputType="text"
                                    android:onTextChanged="@{viewmodel::onLocationChanged}"
                                    android:paddingStart="5dp"
                                    android:text="@={viewmodel.location}"
                                    android:textColor="@color/black"
                                    android:backgroundTint="@color/white"
                                    android:textSize="20sp" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:onClick="@{()->viewmodel.openDateDialog()}">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_date" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="17dp"
                                android:hint="@string/date_of_birth">

                                    <androidx.appcompat.widget.AppCompatEditText
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:imeOptions="actionDone"
                                        android:inputType="text"
                                        android:paddingStart="5dp"
                                        android:onClick="@{()->viewmodel.openDateDialog()}"
                                        android:text="@={viewmodel.dateMutableLiveData}"
                                        android:textSize="20sp"
                                        android:textColor="@color/black"
                                        android:backgroundTint="@color/white"/>


                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                            <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/male"
                                    android:id="@+id/male"
                                    android:checked="false"
                                    android:onClick="@{(view)->viewmodel.genderClicked(view)}"/>
                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female"
                                    android:id="@+id/female"
                                    android:checked="false"
                                    android:onClick="@{(view)->viewmodel.genderClicked(view)}"/>
                            </RadioGroup>
                        </LinearLayout>


                        <Button
                            android:id="@+id/btn_forgot"
                            style="@style/ButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="40dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/register"
                            android:enabled="@{viewmodel.btnSelected}"
                            android:onClick="@{()->viewmodel.register()}"/>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
